; ModuleID = '/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-memintrinsics.c___asan_strlen.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-memintrinsics.c___asan_strlen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TYPE_STRR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @__asan_strlen(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i64 @__nosan_strlen(i8* %4)
  store i64 %5, i64* %3, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = load i64, i64* %3, align 8
  %8 = add i64 %7, 1
  %9 = load i32, i32* @TYPE_STRR, align 4
  %10 = call i32 @kasan_check_range(i8* %6, i64 %8, i32 %9)
  %11 = load i64, i64* %3, align 8
  ret i64 %11
}

declare dso_local i64 @__nosan_strlen(i8*) #1

declare dso_local i32 @kasan_check_range(i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
